--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Checkers</title>
+    <title>Checkers Game</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}"/>
     <script type="text/javascript" src="webjars/jquery/3.2.1/jquery.min.js"></script>
