--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,16 +3,12 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Login form</title>
+    <title>Login page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script type="text/javascript" src="webjars/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
-<!--<form th:action="@{/checkers/v1/registration}" method="get">-->
-    <!--<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Registration Page</button>-->
-<!--</form>-->
-
 <div class="container">
     <div class="row">
         <div class="col-md-5 col-md-offset-4">
