--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Checkers Game home page</title>
+    <title>Home page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <script type="text/javascript" src="webjars/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/webjars/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" th:src="@{/js/client.js}"></script>
 </head>
 <body>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-5 col-md-offset-4">
-            <form autocomplete="off" action="#" th:action="@{/checkers/v1/game}" th:object="${gameRequest}" method="post" class="form-horizontal" role="form">
-                <h2>Game creation form</h2>
-                <div class="form-group">
-                    <div class="col-sm-9">
-                        <label	th:if="${#fields.hasErrors('whiteCheckersNickname')}" th:errors="*{whiteCheckersNickname}" class="validation-message"></label>
-                        <input type="text" th:field="*{whiteCheckersNickname}" placeholder="Player Nickname for WHITE checkers" class="form-control" autofocus="autofocus"/>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 col-md-offset-4">
+                <form autocomplete="off" name="gameRequest" action="#" th:action="@{/checkers/v1/game}" th:object="${gameRequest}" method="post" class="form-horizontal" role="form">
+                    <h2>Game</h2>
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <input type="text" name="whiteSideNickname" placeholder="White Side Player" class="form-control"/>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-9">
-                        <label	th:if="${#fields.hasErrors('whiteCheckersNickname')}" th:errors="*{whiteCheckersNickname}" class="validation-message"></label>
-                        <input type="text" th:field="*{blackCheckersNickname}" placeholder="Player Nickname for BLACK checkers" class="form-control"/>
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <input type="text" name="blackSideNickname" placeholder="Black Side Player" class="form-control"/>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-9">
-                        <label	th:if="${#fields.hasErrors('gameType')}" th:errors="*{gameType}" class="validation-message"></label>
-                        <input type="text" th:field="*{gameType}" placeholder="Game Type (NORMAL or INTERNATIONAL)" class="form-control"/>
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <label>
+                                <select name="gameType">
+                                    <option th:value="Normal">Normal</option>
+                                    <option th:value="International">International</option>
+                                </select>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-9">
-                        <button type="submit" class="btn btn-primary btn-block">Start New Game</button>
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <button type="submit" onclick="createNewGame()" class="btn btn-primary btn-block">Start New Game</button>
+                            <h5 class="text-center"><a th:href="@{/checkers/v1/logout}">Log out</a></h5>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 
 </body>
 </html>
