--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,8 +3,8 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Registration page</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <script type="text/javascript" src="webjars/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <script type="text/javascript" src="/webjars/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -14,14 +14,15 @@
             <form autocomplete="off" action="#" th:action="@{/checkers/v1/registration}" th:object="${playerRequest}" method="post" class="form-horizontal" role="form">
                 <h2>Registration Form</h2>
                 <div class="form-group">
+                    <div class="col-sm-9"></div>
+                </div>
+                <div class="form-group">
                     <div class="col-sm-9">
-                        <label></label>
                         <input type="text" th:field="*{firstName}" placeholder="First Name" class="form-control" autofocus="autofocus"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <label></label>
                         <input type="text" th:field="*{lastName}" placeholder="Last Name" class="form-control"/>
                     </div>
                 </div>
@@ -38,9 +39,12 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <div class="col-sm-9"></div>
+                </div>
+                <div class="form-group">
                     <div class="col-sm-9">
                         <button type="submit" class="btn btn-primary btn-block">Register</button>
-                        <h4 class="text-center"><a th:href="@{/checkers/v1/login}">Log in</a></h4>
+                        <h5 class="text-center"><a th:href="@{/checkers/v1/login}">Log in</a></h5>
                     </div>
                 </div>
             </form>
