--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,22 +2,24 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Error page</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}"/>
 </head>
 <body>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-md-5 col-md-offset-4">
-            <div class="form-group">
-                <div class="col-sm-9">
-                    <p th:utext="${errorMessage}">Error</p>
+        <div>
+            <div>
+                <div>
+                    <p class="text-center">Error</p>
+                    <p class="text-center" th:text="${errorMessage ?: 'Something went wrong...'}"></p>
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-sm-9">
-                    <h4 class="text-center"><a th:href="@{/checkers/v1/game}">Back to Game</a></h4>
+            <div>
+                <div>
+                    <h4 class="text-center"><a th:href="@{/checkers/v1/home}">Back to Home page</a></h4>
                 </div>
             </div>
         </div>
