--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,9 +13,10 @@
     <div class="row">
         <div class="col-md-5 col-md-offset-4">
             <form autocomplete="on" action="#" th:action="@{/checkers/v1/login}" method="post" class="form-horizontal" role="form">
-                <h2>Login Form</h2>
                 <div class="form-group">
-                    <div class="col-sm-9"></div>
+                    <div class="col-sm-9">
+                        <h2 class="text-center">Login Form</h2>
+                    </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-9">
