--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,9 +12,10 @@
     <div class="row">
         <div class="col-md-5 col-md-offset-4">
             <form autocomplete="off" action="#" th:action="@{/checkers/v1/registration}" th:object="${playerRequest}" method="post" class="form-horizontal" role="form">
-                <h2>Registration Form</h2>
                 <div class="form-group">
-                    <div class="col-sm-9"></div>
+                    <div class="col-sm-9">
+                        <h2 class="text-center">Registration Form</h2>
+                    </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-9">
